--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
   <body>
     <h1>This is Clark's Page</h1>
     <p>Nicole is QT 3.14</p>
+    <ol>Things I like about bun:
+      <li>She Super Cutie</li>
+      <li>She very dummy</li>
+      <li>Too silly</li>
+      <li>Very much bunzy</li>
+    </ol>
+    
   </body>
 </html>
