--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lan="en">
   <head>
     <title>Clark's Page</title>
+    <link type="text/css" href="style.css">
   </head>
   <body>
     <h1>This is Clark's Page</h1>
