--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>This is Clark's Page</h1>
     <p>Nicole is QT 3.14</p>
     <ol>Things I like about bun:
+      <li><img src="http://fc06.deviantart.net/fs70/f/2010/158/a/0/a00a765e9836461e9bfc36de75f04cc9.jpg"></li>
       <li>She Super Cutie</li>
       <li>She very dummy</li>
       <li>Too silly</li>
