--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li>Too silly</li>
       <li>Very much bunzy</li>
     </ol>
+    <script type="text/javascript" src="script.js"></script>
     
   </body>
 </html>
