--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		#Contact {padding-top: 50px;height: 600px;color:#fff;background-image: url(http://s19.postimg.org/6atusy4kj/sunset.jpg);}
 		#addr {color: #111;}
 		#p-padding {margin-top: 5px; color: white;}
+		.desc {color: orange;}
 
 	</style>
 
@@ -70,19 +71,19 @@
 
 				<div class="row">
 					<div class="col-lg-4 col-md-4 col-sm-6 p-padding">
-						<p>Airport</p>
-						<img src="http://s19.postimg.org/kxq7wvdsz/airport.jpg" class="img-responsive img-rounded" style="display:inline;width:100%">
-						<p class="bg-info">An image from the tower</p>
+						<p>Random Quote Generator</p>
+						<img src="http://codepen.io/clarkarnold/full/qboaQz/" class="img-responsive img-rounded" style="display:inline;width:100%">
+						<p class="desc">HTML/CSS, Bootstrap Javascript/jQuery</p>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6 p-padding">
 						<p>Sunset View</p>
 						<img src="http://s19.postimg.org/6atusy4kj/sunset.jpg" class="img-responsive img-rounded" style="display:inline;width:100%">
-						<p class="bg-info">Sunset Over ORF</p>
+						<p class="desc">Sunset Over ORF</p>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6 p-padding">
 						<p>Tail & Engine</p>
 						<img src="http://s19.postimg.org/fwnf98vqb/tail.jpg" class="img-responsive img-rounded" style="display:inline;width:100%">
-						<p class="bg-info">Engine & tail during sunrise</p>
+						<p class="desc">Engine & tail during sunrise</p>
 					</div>
 				</div>
 			</div>
