--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
 				<div class="row">
 					<div class="col-lg-4 col-md-4 col-sm-6 p-padding">
 						<p>Random Quote Generator</p>
-						<img src="http://codepen.io/clarkarnold/full/qboaQz/" class="img-responsive img-rounded" style="display:inline;width:100%">
+						<a href="http://codepen.io/clarkarnold/full/qboaQz/">
+						<img src="http://s19.postimg.org/5onvzzusj/capcha.png" class="img-responsive img-rounded" style="display:inline;width:100%">
+						</a>
 						<p class="desc">HTML/CSS, Bootstrap Javascript/jQuery</p>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6 p-padding">
