--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
 		  </div>
 		</nav>
 
-		<div id="Home" class="container-fluid">
+		<div id="Home" class="container-fluid" style="background:#cee1ee">
 			<h1 class="text-center" style="margin-top: 150px;font-size:3.5em">Clark Arnold</h1>
 			<h3 class="text-center" style="margin-top:80px">A cool dude who likes to write code and fly airplanes.</h3>
-				<div class="row text-center" style="margin-left:auto;margin-right:auto;margin-top:140px">
+				<div class="row text-center" style="margin-left:auto;margin-right:auto;margin-top:100px;padding-bottom:50px;">
 
-					<a href="https://github.com/clarkarnold" target="_blank"><button class="btn-default btn-lg">Github <i class="fa fa-github-square"></i></button></a>
+					<a href="https://github.com/clarkarnold" target="_blank"><button class="my-button ">Github <i class="fa fa-github-square"></i></button></a>
 
-					<a href="https://www.linkedin.com/in/clark-arnold-3176aaa0" target="_blank"><button class="btn-default btn-lg">LinkedIn <i class="fa fa-linkedin"></i></button></a>
+					<a href="https://www.linkedin.com/in/clark-arnold-3176aaa0" target="_blank"><button class="my-button">LinkedIn <i class="fa fa-linkedin"></i></button></a>
 
-					<a href="http://www.freecodecamp.com/clarkarnold" target="_blank"><button class="btn-default btn-lg">freeCodeCamp <i class="fa fa-fire fa-fw"></i></button></a>
+					<a href="http://www.freecodecamp.com/clarkarnold" target="_blank"><button class="my-button">freeCodeCamp <i class="fa fa-fire fa-fw"></i></button></a>
 
-					<a href="http://codepen.io/clarkarnold/" target="_blank"><button class="btn-default btn-lg">Codepen <i class="fa fa-codepen"></i></button></a>
+					<a href="http://codepen.io/clarkarnold/" target="_blank"><button class="my-button">Codepen <i class="fa fa-codepen"></i></button></a>
 
 
 					
@@ -72,19 +72,19 @@
 				<div class="row">
 					<div class="col-lg-4 col-md-4 col-sm-6 p-padding">
 						<p>Random Quote Generator</p>
-						<a href="http://codepen.io/clarkarnold/full/qboaQz/" target="_blank">
-						<img src="http://s19.postimg.org/5onvzzusj/capcha.png" class="img-responsive img-rounded" style="display:inline;width:100%">
-						</a>
+            <a href="http://codepen.io/clarkarnold/full/qboaQz/" target="_blank">
+						<img src="http://s19.postimg.org/5onvzzusj/capcha.png" class="img-responsive img-rounded" style="display:inline;width:100%;height:210px"></a>
 						<p class="desc">HTML/CSS, Bootstrap Javascript/jQuery</p>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6 p-padding">
-						<p>Sunset View</p>
-						<img src="http://s19.postimg.org/6atusy4kj/sunset.jpg" class="img-responsive img-rounded" style="display:inline;width:100%">
-						<p class="desc">Sunset Over ORF</p>
+						<p>Javascript Calculator</p>
+            <a href="http://codepen.io/clarkarnold/full/RryqNZ/">
+						<img src="http://s19.postimg.org/ia4y4f5pf/calc.png" class="img-responsive img-rounded" style="display:inline;width:100%;height:210px"></a>
+						<p class="desc">HTML/CSS, Javascript</p>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6 p-padding">
 						<p>Tail & Engine</p>
-						<img src="http://s19.postimg.org/fwnf98vqb/tail.jpg" class="img-responsive img-rounded" style="display:inline;width:100%">
+						<img src="http://s19.postimg.org/fwnf98vqb/tail.jpg" class="img-responsive img-rounded" style="display:inline;width:100%;height:210px">
 						<p class="desc">Engine & tail during sunrise</p>
 					</div>
 				</div>
@@ -95,13 +95,13 @@
 			<p class="text-center lead" style="margin-top:100px;">Please feel welcome to contact me via <a href="mailto:clark.arnold@outlook.com" id="addr">email</a> or by social media below.</p>
 					<div class="row text-center" style="margin-left:auto;margin-right:auto;margin-top:140px">
 
-					<a href="https://github.com/clarkarnold" target="_blank"><button class="btn-default btn-lg">Github <i class="fa fa-github-square"></i></button></a>
+					<a href="https://github.com/clarkarnold" target="_blank"><button class="btn-default btn-lg btn">Github <i class="fa fa-github-square"></i></button></a>
 
-					<a href="https://www.linkedin.com/in/clark-arnold-3176aaa0" target="_blank"><button class="btn-default btn-lg">LinkedIn <i class="fa fa-linkedin"></i></button></a>
+					<a href="https://www.linkedin.com/in/clark-arnold-3176aaa0" target="_blank"><button class="btn-default btn-lg btn">LinkedIn <i class="fa fa-linkedin"></i></button></a>
 
-					<a href="http://www.freecodecamp.com/clarkarnold" target="_blank"><button class="btn-default btn-lg">freeCodeCamp <i class="fa fa-fire fa-fw"></i></button></a>
+					<a href="http://www.freecodecamp.com/clarkarnold" target="_blank"><button class="btn-default btn-lg btn">freeCodeCamp <i class="fa fa-fire fa-fw"></i></button></a>
 
-					<a href="http://codepen.io/clarkarnold/" target="_blank"><button class="btn-default btn-lg">Codepen <i class="fa fa-codepen"></i></button></a>
+					<a href="http://codepen.io/clarkarnold/" target="_blank"><button class="btn-default btn-lg btn">Codepen <i class="fa fa-codepen"></i></button></a>
 
 
 					
