--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			font-family: Tahoma,sans-serif;
 		}
 
-		#home {padding-top: 50px;height: 600px;color:#fff;background-image:url(http://s8.postimg.org/dgoockykz/cozumel56_2.png);color: #222}
+		#home {padding-top: 50px;height: 600px;color:#fff;}
 		#About {padding-top: 50px;height: 600px;color:#fff;background-image:url(http://s19.postimg.org/kxq7wvdsz/airport.jpg); color: #000}
 		#Portfolio {padding-top: 50px;height: 600px;color:#fff;background-image: url(http://s19.postimg.org/5p9hakyw3/trees.jpg); color:#222;}
 		#Contact {padding-top: 50px;height: 600px;color:#fff;background-image: url(http://s19.postimg.org/6atusy4kj/sunset.jpg);}
