--- a/index.html
+++ b/index.html
@@ -329,6 +329,13 @@ body {
   <div class="row text-center" id="portfolio">
   		<h3>cool stuff i've done:</h3>
   		<div class="port-item col-xs-12 col-md-6 col-lg-4">
+  			<p>Recipe Box</p>
+	  		<a href="http://codepen.io/clarkarnold/full/regepx" target="_blank">
+				<img src="http://codepen.io/clarkarnold/pen/regepx/image/small.png" class="img-responsive img-rounded" style="display:inline;width:100%;height:210px">
+				<a/>
+				<p>React, ReactBootstrap, Babel</p>
+		</div>
+  		<div class="port-item col-xs-12 col-md-6 col-lg-4">
   			<p>wikipedia viewer</p>
 	  		<a href="http://codepen.io/clarkarnold/full/PZMJJw" target="_blank">
 				<img src="http://s19.postimg.org/i46n2d603/wiki.jpg" class="img-responsive img-rounded" style="display:inline;width:100%;height:210px">
