Adding leaderboard project

--- a/index.html
+++ b/index.html
@@ -334,7 +334,14 @@ body {
 				<img src="http://codepen.io/clarkarnold/pen/regepx/image/small.png" class="img-responsive img-rounded" style="display:inline;width:100%;height:210px">
 				<a/>
 				<p>React, ReactBootstrap, Babel</p>
-		</div>
+			</div>
+			<div class="port-item col-xs-12 col-md-6 col-lg-4">
+  			<p>Camper Leader Board</p>
+	  		<a href="http://codepen.io/clarkarnold/full/JXVNjb" target="_blank">
+				<img src="http://codepen.io/clarkarnold/pen/JXVNjb/image/small.png" class="img-responsive img-rounded" style="display:inline;width:100%;height:210px">
+				<a/>
+				<p>React, Babel, FCC API</p>
+			</div>
   		<div class="port-item col-xs-12 col-md-6 col-lg-4">
   			<p>wikipedia viewer</p>
 	  		<a href="http://codepen.io/clarkarnold/full/PZMJJw" target="_blank">
